2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c: Include <md5.h>.
	(struct module): Add field md5sum.
	(main): Calculate the md5 digest for the binary.  Compare it to
	the hash calculated at compile time.  If they don't match, panic.
	* Makefile.am (md5sum): New function.
	(tovar): New function.
	(modules.h): Use it.  Generate an md5 digest for the binary.

2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c (struct module): Add field delay.
	(do_gather_stats): Don't initialize EPOCH here...
	(main): ... but here.  After loading all the modules, free the
	memory.  Start the modules according to their respective delay
	parameters.
	* Makefile.am (modules.h): Generate the delay parameter.
	
	(module_paths): Add benchmarks.

2008-06-27  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c (do_gather_stats): Change to use activity_info
	instead of activity_stats.

	(main): Introduce code to delay process creation.

2008-06-26  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c: Include <stdlib.h>.
	(module_count): Make a global static.
	(activities): Likewise.
	(all_done): New variable.
	(now): New function.
	(epoch): Likewise.
	(struct stat): New structure.
	(stats_count): New variable.
	(stats): Likewise.
	(do_gather_stats): New function.
	(main): If --stats is specified, fork a thread to gather
	statistics.  When all processes have exited, print out the
	statistics.

	(main): Name activities according to their first argument.

2008-05-31  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am ($(addsuffix .o, $(files))): Use $(CCAS) instead of
	$(AS).

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am [ENABLE_TESTS]: Don't build package's program.

2008-05-29  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (modules.h): Add an empty string after the command
	line removing the requirement that a module have a command line
	variable.

2008-05-21  Neal H. Walfield  <neal@gnu.org>
